tests/src/frontend/syntax/invalid/unexpected_else.sk

fun test(): void {
  1 else 2
}
